# pyChao

./: .gitignore  README.md  c3d2.sh  config.main.yaml  config.py  euirc.sh  generateFactRels.py  pyChao.py  pyproject.toml  requirements.txt  run.sh  setup.py
export_rss/: __init__.py
export_web/: __init__.py
facts/: __init__.py
mod_calc/: __init__.py
mod_ddate/: __init__.py  ddate.py
mod_fun/: __init__.py
mod_nicknames/: __init__.py  mod_nicknames.db
mod_triggers/: __init__.py
rss/: __init__.py
system/: __init__.py
