[build-system]

requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyChao"
authors = [{name = "Dr. Azrael Tod", email="pychao@g33ky.de"}]
description = "linear python IRC bot, with decades of crust/baggage"
license = {file = "LICENSE"}
version = "2024.01"

[project.scripts]
pyChao = "pyChao:main"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"